💄(frontend) fix layout issue on DashboardItem
Within DashboardItem component, if the training title is too long, it is not
truncated so the component overflows. The best option seems to use a line clamp
to allow the title to go on two lines but truncate it if it exceeds this limit.

Fix #2397

--- a/src/frontend/js/widgets/Dashboard/components/DashboardItem/_styles.scss
+++ b/src/frontend/js/widgets/Dashboard/components/DashboardItem/_styles.scss
@@ -32,9 +32,11 @@
         order: 2;
         margin-top: 0.5rem;
         overflow: hidden;
-        white-space: nowrap;
         text-overflow: ellipsis;
         font-size: 1.25rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
       }
 
       &__code {
